# NintendoWii-Control

./: README.md
FPU/: a.out  fpu_exe.out  run.sh
apps/: README.md  README.ms  a  boot.py  console_menu.py  consoler_runner  consoler_runner.c  max.asm  menu.py  requirements.txt  rw_emb_comp_funcs.py  score.csv  test_sw.py
apps/src/emulator_apps-1.1.0/: MANIFEST.in  pyproject.toml
apps/src/emulator_apps-1.1.0/src/agario_app/: __init__.py  agario.py  config.py  objects.py
apps/src/emulator_apps-1.1.0/src/bomberman_app/: __init__.py  enemy.py  explosion.py  game.py  menu.py  player.py
apps/src/emulator_apps-1.1.0/src/bomberman_app/enums/: __init__.py
apps/src/emulator_apps-1.1.0/src/doodle_app/: __init__.py  inputbox.py  locations.py  main.py  sprites.py  tests.py
apps/src/emulator_apps-1.1.0/src/doom_app/: drawing.py  interaction.py  main.py  player.py  ray_casting.py  settings.py  sprite_objects.py
apps/src/emulator_apps-1.1.0/src/emulator_apps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
apps/src/emulator_apps-1.1.0/src/flappy_app/: __init__.py  main.py
apps/src/emulator_apps-1.1.0/src/flappy_app/src/: flappy.py  rw_emb_comp_funcs.py
apps/src/emulator_apps-1.1.0/src/flappy_app/src/entities/: score.py
apps/src/emulator_apps-1.1.0/src/flappy_app/src/utils/: images.py  sounds.py
apps/src/emulator_apps-1.1.0/src/matris_app/: __init__.py  matris.py  rw_emb_comp_funcs.py
apps/src/emulator_apps-1.1.0/src/space_invaders_app/: __init__.py  alien.py  config.py  decor.py  space_invaders.py  spaceship.py  ui.py
control/: README.md  (+1 more)
(+81 files in other folders)
